waypoint in development.

--- a/src/njk/detail-page.html
+++ b/src/njk/detail-page.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/detail.html' %}
+{% extends '_layouts/detail.html' %}
 {% block info %}
   <p>ccc Block info inside newpage</p>
 {% endblock %}
