--- a/src/njk/index.html
+++ b/src/njk/index.html
@@ -6,7 +6,7 @@
   <article class="container">
   <div class="row">
     <div class="col-lg-12 interative-header">
-    <h1 id="pagetitle">New title crit</h1>
+    <h1 id="pagetitle">New title</h1>
     <p class="author">By {% for author in authors %}
       <a href="{{ author.link }}" target="_blank">{{ author.name }}</a>{% if not loop.last %}{% if loop.revindex0 == 1 %} and {% else %}, {% endif %}{% endif %} {% endfor %}
       <br> Published {{ publish_date }}
