--- a/src/njk/index.html
+++ b/src/njk/index.html
@@ -3,10 +3,21 @@
 {% block page_title %}New index page title{% endblock %}
 
 {% block content %}
-  <article class="container">
+<script>
+  var items = [{ title: "foo", id: 1 }, { title: "bar", id: 2}];
+</script>
+
+<article class="container">
   <div class="row">
     <div class="col-lg-12 interative-header">
-    <h1 id="pagetitle">New title</h1>
+    <h1 id="pagetitle">Title of page</h1>
+    <ul> 
+      {% for book in books %}
+        <li>{{ book.title }}, {{ book.author }}</li>
+      {% else %}
+        <li>This would display if the 'item' collection were empty</li>
+      {% endfor %}
+   </ul>      
     <p class="author">By {% for author in authors %}
       <a href="{{ author.link }}" target="_blank">{{ author.name }}</a>{% if not loop.last %}{% if loop.revindex0 == 1 %} and {% else %}, {% endif %}{% endif %} {% endfor %}
       <br> Published {{ publish_date }}
