--- a/src/njk/detail-page.html
+++ b/src/njk/detail-page.html
@@ -1,7 +1,11 @@
 {% extends '_layouts/detail.html' %}
 {% block info %}
-  <p>ccc Block info inside newpage</p>
+  <img src="assets/img/pirate.jpg" alt="pirate character" class="img-fluid">
+  <p class="byline">By Crit McGillicutty<br>
+  <span>Island Breeze Tribune</span></p>
 {% endblock %}
 {% block story %}
-  <h1>block story inside newpage</h1>
+  <h2>It was a dark and stormy night</h2>
+  <h5>Captain's log, Oct. 18, 2018</h5>
+  <p>Interloper crimp spanker Barbary Coast splice the main brace bilged on her anchor black spot chandler trysail salmagundi. Brigantine fire ship scallywag log squiffy bowsprit lateen sail American Main cog smartly. Dance the hempen jig bilge log galleon pirate yard list Barbary Coast Corsair run a rig.</p>
 {% endblock %}
