--- a/src/njk/detail-page.html
+++ b/src/njk/detail-page.html
@@ -1,4 +1,5 @@
-{% extends '_layouts/detail.html' %}
+{% extends '_layouts/detail.njk' %}
+
 {% block info %}
   <img src="assets/img/pirate.jpg" alt="pirate character" class="img-fluid">
   <p class="byline">By Crit McGillicutty<br>
