--- a/src/njk/index.html
+++ b/src/njk/index.html
@@ -23,7 +23,7 @@
         {% for book in books %}
           <li>{{ book.title }}, {{ book.author }}</li>
         {% else %}
-          <li>This would display if the 'item' collection were empty</li>
+          <li>This would display if the 'books' collection were empty</li>
         {% endfor %}
      </ul>
     </div>
