updates project to allow multiple data json files

--- a/src/njk/detail-page.html
+++ b/src/njk/detail-page.html
@@ -1,7 +1,8 @@
 {% extends '_layouts/detail.njk' %}
+{% set book = data.books[1] %}
 
 {% block info %}
-  <p>Left column content</p>
+  {{ book.title }}
 {% endblock %}
 
 {% block story %}
